AWS requirements setup

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ __pycache__/
 !.vscode/launch.json
 !.vscode/extensions.json
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
